<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/round_corner_top">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:elevation="6dp">
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="17sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="5dp"
            android:layout_weight="1">

        </TextView>
    </LinearLayout>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:layout_marginBottom="50dp">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical">
            <TextView
                android:id="@+id/title_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/t1_privacy_policy"
                android:textSize="30sp"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p1"
                android:textSize="20sp"
                android:layout_marginTop="20dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/t2"
                android:textSize="30sp"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p2"
                android:textSize="20sp"
                android:layout_marginTop="20dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/st1"
                android:textSize="25sp"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p3"
                android:textSize="20sp"
                android:layout_marginTop="20dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/st2"
                android:textSize="25sp"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p4"
                android:textSize="20sp"
                android:layout_marginTop="20dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/st3"
                android:textSize="25sp"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p5"
                android:textSize="20sp"
                android:layout_marginTop="20dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/st4"
                android:textSize="25sp"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p6"
                android:textSize="20sp"
                android:layout_marginTop="20dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/st5"
                android:textSize="25sp"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p7"
                android:textSize="20sp"
                android:layout_marginTop="20dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/st6"
                android:textSize="25sp"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p8"
                android:textSize="20sp"
                android:layout_marginTop="20dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/st7"
                android:textSize="25sp"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p9"
                android:textSize="20sp"
                android:layout_marginTop="20dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/t3"
                android:textSize="30sp"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p10"
                android:textSize="20sp"
                android:layout_marginTop="20dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/st8"
                android:textSize="25sp"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p11"
                android:textSize="20sp"
                android:layout_marginTop="20dp">
            </TextView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/st9"
                android:textSize="25sp"
                android:textStyle="bold">
            </TextView>
            <TextView
                android:id="@+id/textLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/p12"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:linksClickable="true">
            </TextView>
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:elevation="6dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:textSize="17sp"
            android:textStyle="bold">

        </TextView>
    </LinearLayout>

</LinearLayout>

